# suong

./: .env.example  .gitignore  LICENSE  README.md  RUN.bat  RUN.sh  SETUP.bat  SETUP.ps1  SETUP.sh  pyproject.toml  script_life_insight_generalization_test.txt  script_life_insight_test.txt  script_practical_life_steps_generalization_test.txt  script_practical_life_steps_test.txt
docs/: OBJECT_LIBRARY_INGESTION.md  OBJECT_STYLE_FAMILY_EVALUATION.md  RELEASE_CHECKLIST.md  VISUAL_ACCEPTANCE.md
music/: library.json
scripts/: align_practical_callirrhoe.py  benchmark_gemini_tts.py  production_acceptance.py  release_preflight.py  render_asset_library_v2_7_scene.py  render_minimalist_contact_sheet.py  render_practical_callirrhoe.py  rerender_practical_life_steps.py  scene_regeneration.py  slice_female_01_expressions.py  smoke_expand.py  smoke_plan.py  smoke_translate.py
tella/: __init__.py  __main__.py  _gemini.py  _voice_pace.py  acceptance_script.py  atomic_write.py  channels.py  cli.py  production.py  production_lock.py  scene_regeneration.py  subtitles.py  visual_acceptance.py  voice_profiles.py  wizard.py
tests/: conftest.py  test_acceptance_canonical_script.py  test_ai_image_stock_fallback.py  test_asset_batch_v2.py  test_asset_library_procedural_minimal.py  test_asset_library_v2.py  test_asset_library_v2_cli.py  test_asset_library_v2_seven_scene.py  test_atomic_writes.py  test_bfl_flux2_provider.py  test_bfl_front_anchor_canary.py  test_bfl_front_anchor_orchestration.py  test_bfl_front_anchor_provider.py  test_bfl_front_anchor_transport.py  test_gemini_tts.py  (+71 more)
(+201 files in other folders)
