[project]
name = "tella"
version = "0.1.0"
description = "Tella — turn a topic into a narrated story video, fully local, free-tier AI stack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Khue Tran" }]

dependencies = [
  "httpx>=0.27",
  "google-genai>=0.5",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "pillow>=10.3",
  "edge-tts>=7.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]
r2-canary = [
  "boto3>=1.35,<2",
]

[project.scripts]
tella = "tella.cli:main"

[project.urls]
Homepage = "https://khuetran.com"
Demo = "https://app.khuetran.com/tella"
Repository = "https://github.com/chanktb/tella"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tella*"]
exclude = ["channels*", "scripts*", "SESSIONS*", "out*"]

[tool.ruff]
line-length = 100
target-version = "py312"
